-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8, 6.9
-
None
-
e52980a7b (6.8.0), a2f478b20 (dev), e49f008dc (6.8)
-
DaVinci 104
QTBUG-128644 reported compilation issues against QDoc when built against Clang libraries from LLVM 19. With the compilation issues resolved, all tests pass; however, Clang segfaults when generating the documentation for qt3d.
- resulted from
-
QTBUG-128644 QDoc fails to compile against Clang-19 RC1-RC4, Clang 20
-
- Closed
-
| For Gerrit Dashboard: QTBUG-128926 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 591180,5 | QDoc: Adapt clang/AST/QualTypeNames.h to upstream changes | dev | qt/qttools | Status: MERGED | +2 | 0 |
| 591334,2 | QDoc: Adapt clang/AST/QualTypeNames.h to upstream changes | 6.8.0 | qt/qttools | Status: MERGED | +2 | 0 |
| 591690,2 | QDoc: Adapt clang/AST/QualTypeNames.h to upstream changes | 6.8 | qt/qttools | Status: MERGED | +2 | 0 |